<resources>
    <string name="app_name">Rat Tracker</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="new_user">New User</string>
    <string name="login_guest">Login as guest</string>
    <string name="title_activity_login">Sign in</string>
    <string name="get_rat_data">Get rat data</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="create_user">Create User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="return_home">Return</string>
    <string name="system_error">There has been an error.</string>
    <string name="add_spotting">Add a Rat Spotting</string>
    <string name="view_ratspottings">View Spottings</string>
    <string name="view_graph">View Graph</string>
    <string name="view_map">View Map</string>
    <!-- Strings related to Map -->
    <string name="title_activity_maps">Map with Marker</string>
    <string name="address">Address:</string>
    <string name="borough">Borough:</string>
    <string name="city">City:</string>
    <string name="date">Date:</string>
    <string name="lat">Lat:</string>
    <string name="location_type">Location Type:</string>
    <string name="longitude">Long:</string>
    <string name="today">Today</string>
    <string name="zip">Zip:</string>
    <string name="date_format">MM/DD/YYYY HH:MM</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
