<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:id="@+id/txt_NewUserFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_NewUserLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_NewUserFirstName"
        android:layout_below="@+id/txt_NewUserFirstName"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txt_NewUserEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_NewUserLastName"
        android:layout_below="@+id/txt_NewUserLastName"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_NewUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_NewUserEmail"
        android:layout_below="@+id/txt_NewUserEmail"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_createUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_NewUserPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:onClick="createUser"
        android:text="@string/create_user" />

    <Button
        android:id="@+id/btn_returnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_createUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="back"
        android:text="@string/return_home" />

</RelativeLayout>